fix: enforce Java 8 source compatibility for API and JNI modules
Replace Java 9+ constructs across the wasmtime4j API module to restore
Java 8 source/target compatibility. Convert records in ComponentItemInfo
to final classes, replace List.of/Map.of/copyOf with Collections
utilities, extract private interface method from Instance to InstanceUtils,
and replace var usage with explicit types. Lower Panama target from
Java 26 to Java 22.